fix logo styles
Squashed commit of the following:

commit 2d2b9520a544517552dc1e8e2a15094a0d5e1050
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jun 6 14:59:33 2024 +0300

    fix logo styles

--- a/Extension/src/pages/common/styles/icons.pcss
+++ b/Extension/src/pages/common/styles/icons.pcss
@@ -14,11 +14,10 @@
     &--logo {
         width: 107px;
         height: 24px;
-        /* FIXME: use var */
-        color: #232323;
+        color: var(--gray1f);
 
         @media (prefers-color-scheme: dark) {
-            color: var(--gray300);
+            color: var(--grayf6);
         }
     }
 
@@ -60,7 +59,7 @@
 .light-mode {
     .icon {
         &--logo {
-            color: #232323;
+            color: var(--gray1f);
         }
 
         &--gray700 {
@@ -72,7 +71,7 @@
 .dark-mode {
     .icon {
         &--logo {
-            color: var(--gray300);
+            color: var(--grayf6);
         }
 
         &--gray700 {
